<resources>
    <string name="app_name">HMS</string>

    <string name="loginStreamsHeading">Choose Your Role</string>
    <string name="b_Admin_Login">Admin login</string>
    <string name="b_Staff_Login">Staff login</string>
    <string name="b_Patient_Login">Patient login</string>

    <string name="doctrsigninimage">Doctor signin picture</string>
    <string name="title_activity_staff_login">Staff_Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="StaffLogin_heading">Staff Login</string>
    <string name="staffloginuser">User Name:</string>
    <string name="staffloginpassword">Password</string>
    <string name="staffloginsubmit_b">Submit</string>
    <string name="stafflogin_doctor">Doctor</string>
    <string name="stafflogin_staff">Staff</string>
    <string name="stafflogindesignation">Select designation</string>
    <string name="staffloginregister">No account? Register Now</string>
</resources>